Fixed overflow bug, articles use summary, vite dev hosts for local network

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,201 +1,197 @@
-html {
-  overflow-x: hidden;
-}
-
 .navbar {
-  padding: 1vh max(1rem, 5vw);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: transparent;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  background-color: rgba(18, 18, 18, 0.8);
-  backdrop-filter: blur(10px);
+	padding: 1vh max(1rem, 5vw);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: transparent;
+	position: sticky;
+	top: 0;
+	z-index: 1000;
+	background-color: rgba(18, 18, 18, 0.8);
+	backdrop-filter: blur(10px);
 }
 
 .navbar-brand {
-  font-size: 50px;
-  font-weight: bold;
-  color: rgb(230, 230, 230);
-  transition: color 0.3s ease;
-  letter-spacing: -1px;
+	font-size: 50px;
+	font-weight: bold;
+	color: rgb(230, 230, 230);
+	transition: color 0.3s ease;
+	letter-spacing: -1px;
 }
 
 .navbar-links {
-  display: flex;
-  list-style-type: none;
-  background: none;
-  border: none;
-  font: inherit;
-  cursor: pointer;
-  padding: 0;
-  color: inherit;
-  text-decoration: none;
+	display: flex;
+	list-style-type: none;
+	background: none;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	padding: 0;
+	color: inherit;
+	text-decoration: none;
 }
 
 .navbar-link {
-  font-size: 22px;
-  color: #f5f5f5;
-  transition: color 0.3s ease, transform 0.3s ease;
+	font-size: 22px;
+	color: #f5f5f5;
+	transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .navbar-link:hover {
-  color: #f06739;
-  transform: translateY(-2px);
+	color: #f06739;
+	transform: translateY(-2px);
 }
 
 .navbar-brand-link {
-  color: #f06739;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1rem 0;
-  transition: transform 0.3s linear;
+	color: #f06739;
+	text-decoration: none;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem 0;
+	transition: transform 0.3s linear;
 }
 
 .navbar-brand-link img {
-  height: min(4rem, 10vw);
+	height: min(4rem, 10vw);
 }
 
 .navbar-brand-link:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .navbar .search {
-  color: inherit;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  transition: color 0.3s;
+	color: inherit;
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	transition: color 0.3s;
 }
 
 .navbar .search:hover {
-  color: #f06739;
+	color: #f06739;
 }
 
 .sidebar {
-  position: fixed;
-  background-color: rgba(8, 8, 8, 0.8);
-  backdrop-filter: blur(10px);
-  top: var(--navbar-height);
-  height: calc(100vh - (var(--navbar-height)));
-  z-index: 1010;
-  overflow-y: auto;
-  display: flex;
-  /* align-items: center; */
-  justify-content: center;
-  text-align: center;
+	position: fixed;
+	background-color: rgba(8, 8, 8, 0.8);
+	backdrop-filter: blur(10px);
+	top: var(--navbar-height);
+	height: calc(100vh - (var(--navbar-height)));
+	z-index: 1010;
+	overflow-y: auto;
+	display: flex;
+	/* align-items: center; */
+	justify-content: center;
+	text-align: center;
 }
 
 .sidebar-ddown li {
-  padding: 0.5rem 1rem;
-  list-style-type: none;
+	padding: 0.5rem 1rem;
+	list-style-type: none;
 }
 
 .sidebar-item {
-  border-top: 1px solid gray;
-  padding: 1rem;
+	border-top: 1px solid gray;
+	padding: 1rem;
 }
 
 .sidebar-item:last-child {
-  border-bottom: 1px solid gray;
+	border-bottom: 1px solid gray;
 }
 
 .sidebar-ddown {
-  display: none;
+	display: none;
 }
 
 .ddown-visible .sidebar-ddown {
-  display: block;
+	display: block;
 }
 
 .sidebar-category,
 .sidebar-link {
-  transition: color 0.3s;
+	transition: color 0.3s;
 }
 
 .sidebar-category:hover,
 .sidebar-link:hover {
-  color: #f06739;
+	color: #f06739;
 }
 
 .sidebar .sidebar-category {
-  padding: 0.5rem 3rem;
+	padding: 0.5rem 3rem;
 }
 
 .darken-bg {
-  width: 100%;
-  z-index: 995;
-  position: fixed;
-  top: var(--navbar-height);
-  height: calc(100vh - (var(--navbar-height)));
-  background-color: #00000088;
+	width: 100%;
+	z-index: 995;
+	position: fixed;
+	top: var(--navbar-height);
+	height: calc(100vh - (var(--navbar-height)));
+	background-color: #00000088;
 }
 
 .search-wrapper .search-btn {
-  border: none;
-  color: white;
-  padding: 0.7rem 1rem;
-  background-color: transparent;
-  cursor: pointer;
-  transition: color 0.3s ease;
+	border: none;
+	color: white;
+	padding: 0.7rem 1rem;
+	background-color: transparent;
+	cursor: pointer;
+	transition: color 0.3s ease;
 }
 
 .search-wrapper .search-btn:hover {
-  color: #f06739;
+	color: #f06739;
 }
 
 .search-wrapper .search-column {
-  position: fixed;
-  top: var(--navbar-height, 60px);
-  right: 0;
-  height: 10vh;
-  background-color: rgba(8, 8, 8, 0.8);
-  backdrop-filter: blur(10px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 1.5rem;
-  transform: translateX(110%);
-  transition: transform 0.4s ease;
-  z-index: 1050;
-  box-shadow: -5px 0 10px rgba(0, 0, 0, 0.4);
-  box-sizing: border-box;
-  width: min(350px, 90vw);
-  max-width: 100vw;
+	position: fixed;
+	top: var(--navbar-height, 60px);
+	right: 0;
+	height: 10vh;
+	background-color: rgba(8, 8, 8, 0.8);
+	backdrop-filter: blur(10px);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1.5rem;
+	transform: translateX(110%);
+	transition: transform 0.4s ease;
+	z-index: 1050;
+	box-shadow: -5px 0 10px rgba(0, 0, 0, 0.4);
+	box-sizing: border-box;
+	width: min(350px, 90vw);
+	max-width: 100vw;
 }
 
 .search-wrapper .search-column.open {
-  transform: translateX(0);
+	transform: translateX(0);
 }
 
 .search-wrapper .search-input {
-  width: 100%;
-  padding: 0.5rem;
-  font-size: min(3.5vw, 1rem);
-  border-radius: 0.2rem;
-  border: 1px solid gray;
-  outline: none;
-  margin-right: 0.5rem;
-  background-color: #1a1a1a;
-  color: white;
+	width: 100%;
+	padding: 0.5rem;
+	font-size: min(3.5vw, 1rem);
+	border-radius: 0.2rem;
+	border: 1px solid gray;
+	outline: none;
+	margin-right: 0.5rem;
+	background-color: #1a1a1a;
+	color: white;
 }
 
 .search-wrapper .submit-btn {
-  width: fit-content;
-  padding: 0.5rem 1rem;
-  background-color: #f06739;
-  border: none;
-  color: white;
-  font-size: min(3.5vw, 1rem);
-  border-radius: 0.2rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+	width: fit-content;
+	padding: 0.5rem 1rem;
+	background-color: #f06739;
+	border: none;
+	color: white;
+	font-size: min(3.5vw, 1rem);
+	border-radius: 0.2rem;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
 }
 
 .search-wrapper .submit-btn:hover {
-  background-color: #bf451d;
+	background-color: #bf451d;
 }
